# pdeathsignal

./: .gitignore  Cargo.toml  LICENSE.md  MANIFEST.in  README.md  pdeathsignal.c  pyproject.toml  requires.txt  rustfmt.toml  setup.cfg  setup.py
src/: lib.rs
src/pdeathsignal/: __init__.py  __init__.pyi
