[metadata]
name = pdeathsignal
description = Set or get the parent-death signal number of the calling process
version = 0.1.0

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/Kijewski/pdeathsignal
project_urls =
    homepage = https://github.com/Kijewski/pdeathsignal
    repository = https://github.com/Kijewski/pdeathsignal
    issues = https://github.com/Kijewski/pdeathsignal/issues

author = René Kijewski
maintainer = René Kijewski
author_email = pypi.org@k6i.de
maintainer_email = pypi.org@k6i.de

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Rust
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only

[options]
requires_python ~= 3.10
zip_safe = False
package_dir =
    = src
